--- a/contact.html
+++ b/contact.html
@@ -129,6 +129,8 @@ body {
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
+
+<!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
                             <a href="https://www.facebook.com/GraphicFelix"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
                             <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
@@ -137,7 +139,7 @@ body {
 
 </footer>
 
- 
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
