--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@ body {
                 <div class="mb-5">
                   <p>Dallas, Texas USA
                 </p>
-<h4 class="h4 mb-3">Email</h4>
+                  <h4 class="h4 mb-3"><b>Email</b></h4>
                   <p>Jfelixzavala@yahoo.com</p>
             
           
