--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/map.jpg" alt="Image" class="img-fluid" width=90% >
+              <img src="img/map.JPG" alt="Image" class="img-fluid" width=90% >
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
         
