--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Contact Me</h2>
+            <h2>Get in Touch</h2>
             
           </div>
         </div>
