--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>About the Artist;</h2>
+            <h2>About the Artist</h2>
             <p>An introduction to the artist:</p>
           </div>
         </div>
