--- a/about.html
+++ b/about.html
@@ -115,14 +115,8 @@ body {
         
 <h4 class="h4 mb-3">Who am I?</h4>
                 <div class="mb-5">
-                  <p> I was born and raised in a city called Brownsville which is located in the southern most part of Texas. I moved to the Dallas-Fort Worth Metroplex in 2013 and was pretty much on my own in a new city. With this new found freedom I began making more time for stuff I love like martial arts, traveling, and of course art. I decided to go back to school and continue my education in the graphic arts. I have since earned a degree and I have begun working as a freelance graphic artist.
+                  <p> I was born and raised in a city called Brownsville which is located in the southern most part of Texas. I moved to the Dallas-Fort Worth Metroplex in 2013 and was pretty much on my own in a new city. With this new found freedom I began making more time for stuff I love like martial arts, traveling, and of course art. I decided to go back to school and continue my education in the graphic arts. I have since earned my associates degree and I have begun working on pursuing by bachelors of arts.
                 </p>
-<h4 class="h4 mb-3">Some of my credentials:</h4>
-                <ul class="list-unstyled list-line mb-5">
-                  <li>Associate of Arts, Graphic Communications</li>
-                  <li>Computer Graphics Certificate</li>
-                  <li>Photo Retouching Certificate</li>
-                </ul>
                   
                   <h4 class="h4 mb-3">Insight into my vision for my goals</h4>
                   <p> I would like to work in a role that will allow me to expand my skills in digital media creation. Especially those roles that involve web content and digital illustration. In the near future I would also like to do some more work with animation. </p>
