--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
           <h2>Welcome - Bienvenidos - 歡迎</h2>
-             <p>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</P>
+             <p>#SUPPORTTHEARTS</P>
        
 
 
