--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ body {
              <p>#SUPPORTTHEARTS</P>
        
 
- <h2>8-Point Turn Animation</h2>
-             <p>This is an 8-point turn of a character that I am using for a side project.</P>
+
 
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/7w6GqwcqH3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -115,6 +114,8 @@ body {
           </div>
       
 <br>
+       <h2>El Portfolio</h2>
+             <p></P>
      <hr>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
