--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
           <h2>Welcome - Bienvenidos - 歡迎</h2>
-             <p>This is an 8-Point turn animation for a character I'm using on a project. #SUPPORTTHEARTS</P>
+             <p>This is an 8-Point turn animation for a character I created.</P>
        
 
 
