--- a/Silvalogo.html
+++ b/Silvalogo.html
@@ -100,8 +100,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Tyson Fury Article &#129354;</h2>
-            <p>A story on the one and only Gypsy King</p>
+            <h2>Graphic Rebranding</h2>
+            <p>An update I made to an existing logo</p>
           </div>
         </div>
       </div>
@@ -110,22 +110,22 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/Mockup.jpg" alt="Image" class="img-fluid">
+              <img src="img/para-bellum-official-red updated.jpg" alt="Image" class="img-fluid">
              &nbsp;
               &nbsp;
               &nbsp;
               &nbsp;
-               <img src="img/Magazine_Mockup_3.jpg" alt="Image" class="img-fluid">
+               <img src="img/para-bellum-official-red.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
         
 <h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                  <p> This is a piece I created for my portfolio class. We were asked to create a piece that incorporated our skills in typography, illustration, and photoshop. 
+                  <p> This is a piece I updated for the coach at A local martial arts studio.  
                 </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>All of the text and typography in the image was created in Adobe InDesign</li>
+                  <li>Matched the original tupeface</li>
                   <li>The image of Tyson was manipulated in Adobe Photoshop. </li>
                   <li>All the shapes were created in Adobe Illustrator</li>
                 </ul>
