--- a/Silvalogo.html
+++ b/Silvalogo.html
@@ -100,8 +100,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Graphic Rebranding</h2>
-            <p>An update I made to an existing logo</p>
+            <h2>Logo Rebrand</h2>
+            <p>This is a revision I made to an existing logo</p>
           </div>
         </div>
       </div>
@@ -125,13 +125,13 @@ body {
                 </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Matched the original tupeface</li>
-                  <li>The image of Tyson was manipulated in Adobe Photoshop. </li>
-                  <li>All the shapes were created in Adobe Illustrator</li>
+                  <li>Matched the typeface to the orginal </li>
+                  <li>Provided multiple samples for the final design</li>
+                  <li>All the work was done in Adobe Illustrator</li>
                 </ul>
                   
                   <h4 class="h4 mb-3">Insight into my vision</h4>
-                  <p> I wanted to create something that captured the bold personality of Tyson Fury and at the same time hinted to his darker side.
+                  <p> I had to remove the second set of stars to make space for the text but I wanted to keep this as close to the original design as possible. 
                 </div>
 
             
