--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
                 <h3>Logo</h3>
                 <span>Logo Revision</span>
               </div>
-              <img class="img-fluid" src="img/para-bellum-official-red%20updated.jpg">
+              <img class="img-fluid" src="img/para-bellum-official-red.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
