--- a/Silvalogo.html
+++ b/Silvalogo.html
@@ -110,7 +110,7 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/para-bellum-official-redog.jpg" alt="Image" class="img-fluid">
+              <img src="img/para-bellum-official-red og.jpg" alt="Image" class="img-fluid">
              &nbsp;
               &nbsp;
               &nbsp;
