--- a/index.html
+++ b/index.html
@@ -171,6 +171,33 @@ body {
               <img class="img-fluid" src="img/maxresdefault.jpg">
             </a>
           </div>
+           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="Silvalogo.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Logo</h3>
+                <span>Logo Revision</span>
+              </div>
+              <img class="img-fluid" src="img/para-bellum-official-red.jpg">
+            </a>
+          </div>
+          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="subro.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Subro Tee</h3>
+                <span>Design & Mock-up</span>
+              </div>
+              <img class="img-fluid" src="img/Graphic Tee thumb faded.jpg">
+            </a>
+          </div>
+          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="image4.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>LoFi Video</h3>
+                <span>Animation</span>
+              </div>
+              <img class="img-fluid" src="img/maxresdefault.jpg">
+            </a>
+          </div>
         </div>
       </div>
     </section>
