--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@ body {
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Silvalogo.html" class="item-wrap fancybox">
+            <a href="beardoil.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Logo</h3>
-                <span>Logo Revision</span>
+                <h3>Branding</h3>
+                <span>Logo & Mock-up</span>
               </div>
-              <img class="img-fluid" src="img/para-bellum-official-red.jpg">
+              <img class="img-fluid" src="img/pf-s100-mockup-04111.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
