--- a/beardoil.html
+++ b/beardoil.html
@@ -99,8 +99,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Beard Oil &#129492;</h2>
-            <p>Smooth like butter</p>
+            <h2>Beard Oil</h2>
+            <p>Design & Mock-Up</p>
           </div>
         </div>
       </div>
@@ -109,13 +109,10 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/beard oil bottle mockup portfolio1.jpg" alt="Beard Oil bottle mockup" class="img-fluid">
+              <img src="img/pf-s100-mockup-04111.jpg" alt="Beard Oil bottle mockup" class="img-fluid">
               <br>
-                       &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-               <img src="img/Beard Oil Label.jpg" alt="Beard oil label"  class="img-fluid">
+            
+        
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
