--- a/Silvalogo.html
+++ b/Silvalogo.html
@@ -100,8 +100,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Logo Rebrand</h2>
-            <p>This is a revision I made to an existing logo</p>
+            <h2>Old Logo</h2>
+         
           </div>
         </div>
       </div>
@@ -115,6 +115,7 @@ body {
               &nbsp;
               &nbsp;
               &nbsp;
+                 <h2>New Logo</h2>
                <img src="img/para-bellum-official-red.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
