--- a/index.html
+++ b/index.html
@@ -181,6 +181,15 @@ body {
               <img class="img-fluid" src="img/para-bellum-official-red.jpg">
             </a>
           </div>
+               <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="8point.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>8-Point Turn</h3>
+                <span>Illustration & Animation</span>
+              </div>
+              <img class="img-fluid" src="img/mq3.jpg">
+            </a>
+          </div>
          
        
         </div>
