--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body {
                 <h3>8-Point Turn</h3>
                 <span>Illustration & Animation</span>
               </div>
-              <img class="img-fluid" src="img/mq3.jpg">
+              <img class="img-fluid" src="img/8pointstill.jpg">
             </a>
           </div>
          
