--- a/subro.html
+++ b/subro.html
@@ -99,8 +99,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>SUBRO Tee &#128085;</h2>
-            <p>Submission Robot Jiu-jitsu Apparel</p>
+            <h2>SUBRO Apparel</h2>
+            <p>Martial Arts Apparel Brand</p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@ body {
               &nbsp;
               &nbsp;
               &nbsp;
-             
+                <img src="img/All in one_Cap Mock-up.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -130,6 +130,7 @@ body {
                   <li>I sketched several different versions of these illustrations</li>
                   <li>I Created the final design in Adobe Illustrator.</li>
                      <li>Provided several different mock-ups to present a better idea of the final designs.</li>
+                  <li>Created several web graphics for the company.</li>
                 </ul>
                   
                   <h4 class="h4 mb-3">Insight into my vision</h4>
