--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/fz-gif-1.gif" width="75%"></a> 
+      <a class="navbar-brand" href="index.html"><center><img src="img/fz-gif-1.gif" width="90%"></center></a> 
  
         <span></span>
       </a>
