--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <br>
-      <br>
-      <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a> 
+      
+    div {
+ 
+  padding: 75px 0px 0px 0px;
+
+}
+    <div>  <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a> </div>
       
  
         <span></span>
