--- a/index.html
+++ b/index.html
@@ -86,12 +86,7 @@ body {
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       
-    div {
- 
-  padding: 75px 0px 0px 0px;
-
-}
-    <div>  <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a> </div>
+  <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a> 
       
  
         <span></span>
