--- a/index.html
+++ b/index.html
@@ -74,14 +74,17 @@ body {
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+div {
 
+  padding: 75px 0px 0px 0px;
+  
 
 </head>
 
 <body>
 
   <!-- ======= Navbar ======= -->
-
+ <div> <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a></div>
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
