--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@ body {
 div {
 
   padding: 75px 0px 0px 0px;
-  
-
+  }
+  </style>
 </head>
 
 <body>
 
   <!-- ======= Navbar ======= -->
- <div> <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a></div>
+ <div> <a href="index.html"><center><img src="img/felixloop.gif" width="80%"></center></a></div>
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
