--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
-    <a href="https://felixzavala.com/index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+ 
     <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
 
 
@@ -85,7 +85,7 @@ body {
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       
-  <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="95%"></center></a> 
+  <a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="95%"></center></a> 
       
  
         <span></span>
