--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ body {
 
 
 </style>
-<body>
+
+
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -84,8 +85,15 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
+        <style>
+div {
+  
+  margin-top: 100px;
+
+}
+</style>
       
-  <a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="90%"></center></a> 
+  <div><a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="88%"></center></a> </div>
       
  
         <span></span>
