--- a/index.html
+++ b/index.html
@@ -85,15 +85,9 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-        <style>
-div {
-  
-  margin-top: 100px;
 
-}
-</style>
       
-  <div><a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="88%"></center></a> </div>
+<a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="88%"></center></a> 
       
  
         <span></span>
