--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ body {
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
 
-      
+      &nbsp;
+      &nbsp;
+      &nbsp;
 <a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="88%"></center></a> 
       
  
