--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ body {
       &nbsp;
       &nbsp;
       &nbsp;
+        &nbsp;
+      &nbsp;
+      &nbsp;
 <a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="88%"></center></a> 
       
  
