--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body {
                 <h3>Logo</h3>
                 <span>Logo Revision</span>
               </div>
-              <img class="img-fluid" src="img/para-bellum-official-red.jpg">
+              <img class="img-fluid" src="img/floresmockup.jpg">
             </a>
           </div>
        
