--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body {
                 <h3>Subro Apparel</h3>
                 <span>Design & Mock-up</span>
               </div>
-              <img class="img-fluid" src="img/Graphic Tee thumb faded.jpg">
+              <img class="img-fluid" src="img/All%20in%20one_Cap%20Mock-up.png">
             </a>
           </div>
        
