--- a/beardoil.html
+++ b/beardoil.html
@@ -86,7 +86,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-    <a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="80%"></center></a> 
+    <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="80%"></center></a> 
  
         <span></span>
       </a>
