--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
       &nbsp;
       &nbsp;
   <br>
-<a class="navbar-brand" href="index.html class="w3-padding-large"><center><img src="img/felixloop.gif" width="80%"></center></a> 
+<a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="80%"></center></a> 
       
  
         <span></span>
