--- a/beardoil.html
+++ b/beardoil.html
@@ -86,6 +86,11 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
+      <br>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+  <br>
     <a class="navbar-brand" href="index.html"><center><img src="img/felixloop.gif" width="80%"></center></a> 
  
         <span></span>
