--- a/beardoil.html
+++ b/beardoil.html
@@ -104,8 +104,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Beard Oil</h2>
-            <p>Design & Mock-Up</p>
+            <h2>Design & Mock-up</h2>
+            <p></p>
           </div>
         </div>
       </div>
