--- a/image2.html
+++ b/image2.html
@@ -86,7 +86,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
+      <a class="navbar-brand" href="index.html"><img src="logo.gif" width="80%"></a> 
  
         <span></span>
       </a>
