--- a/beardoil.html
+++ b/beardoil.html
@@ -91,7 +91,7 @@ body {
       &nbsp;
       &nbsp;
   <br>
-    <a class="navbar-brand" href="index.html"><center><img src="img/beardoilgif.gif" width="80%"></center></a> 
+    <a class="navbar-brand" href="index.html"><center><img src="img/BRANDINGGIF.gif" width="80%"></center></a> 
  
         <span></span>
       </a>
