--- a/subro.html
+++ b/subro.html
@@ -86,7 +86,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/BRANDING.gif" width="80%"></a> 
+      <a class="navbar-brand" href="index.html"><img src="img/BRANDINGGIF.gif" width="80%"></a> 
  
         <span></span>
       </a>
