--- a/8point.html
+++ b/8point.html
@@ -86,7 +86,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/ANIMATIONGIF.gif" width="80%"></a> 
+      <center> <a class="navbar-brand" href="index.html"><img src="img/ANIMATIONGIF.gif" width="80%"></a> </Center>
  
         <span></span>
       </a>
