--- a/image3.html
+++ b/image3.html
@@ -87,6 +87,7 @@ body {
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
+     <center> <a class="navbar-brand" href="index.html"><img src="img/mag.gif" width="80%"></a></center>
  
         <span></span>
       </a>
