--- a/Silvalogo.html
+++ b/Silvalogo.html
@@ -87,7 +87,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-     <center> <a class="navbar-brand" href="index.html"><img src="img/logo.gif" width="80%"></a> </center>
+     <center> <a class="navbar-brand" href="index.html"><img src="img/LOGO.gif" width="80%"></a> </center>
  
         <span></span>
       </a>
