--- a/image2.html
+++ b/image2.html
@@ -86,7 +86,7 @@ body {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <center> <a class="navbar-brand" href="index.html"><img src="logo.gif" width="80%"></a> </center>
+      <center> <a class="navbar-brand" href="index.html"><img src="LOGO.gif" width="80%"></a> </center>
  
         <span></span>
       </a>
