--- a/image3.html
+++ b/image3.html
@@ -82,6 +82,10 @@ body {
 <body>
 
   <!-- ======= Navbar ======= -->
+  <br>
+  <br>
+  &nbsp;
+  &nbsp;
   <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="20%"></a> 
     <center> <a class="navbar-brand" href="index.html"><img src="img/mag.gif" width="60%"></a></center>
   <nav class="navbar navbar-light custom-navbar">
