--- a/work-single.html
+++ b/work-single.html
@@ -135,12 +135,12 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
-      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="img/pf-s100-mockup-04111.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
     
 
     <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+      <img src="img/Mockup.jpg" alt="Forest" width="600" height="400">
     </a>
 
   </div>
@@ -148,12 +148,12 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
-      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="img/IMG_0972.PNG" alt="Cinque Terre" width="600" height="400">
     </a>
     
 
     <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+      <img src="img/All%20in%20one_Cap%20Mock-up.png" alt="Forest" width="600" height="400">
     </a>
 
   </div>
