--- a/work-single.html
+++ b/work-single.html
@@ -63,8 +63,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 
 </script>
+     
 
-  <h2>Social Media Updates</h2>
+    <!-- ======= Services Section ======= -->
+  <section class="section site-portfolio">
+      <div class="container">
+        <div class="row mb-5 align-items-center data-aos="fade-up">
+                  <h2>Social Media Updates</h2>
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
@@ -102,6 +107,6 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   <script src="assets/js/main.js"></script>
                                  </font>
 
-</footer>
 </body>
+
 </html>
