--- a/work-single.html
+++ b/work-single.html
@@ -35,7 +35,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Photo grid -->
   <div class="w3-row w3-grayscale-min">
     <div class="w3-half">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
+      <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
       <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
       <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
    </div>
