--- a/work-single.html
+++ b/work-single.html
@@ -23,14 +23,14 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
-      <img src="/w3images/streetart.jpg" style="width:100%">
-      <img src="/w3images/streetart2.jpg" style="width:100%">
-      <img src="/w3images/streetart5.jpg" style="width:100%">
+      <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%">
+      <img src="/img/Mockup.jpg" style="width:100%">
+      <img src="/img/floresmockupthumb.jpg" style="width:100%">
     </div>
 
     <div class="w3-half">
-      <img src="/w3images/streetart3.jpg" style="width:100%">
-      <img src="/w3images/streetart4.jpg" style="width:100%">
+      <img src="/img/Mockup.jpg" style="width:100%">
+      <img src="/img/IMG_0972.PNG" style="width:100%">
     </div>
   </div>
   
