--- a/work-single.html
+++ b/work-single.html
@@ -16,8 +16,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white">MY ART</a>
-    <a href="#about" class="w3-right w3-button w3-white">About</a>
+    <a href="#" class="w3-left w3-button w3-white"><img src="img/felixloop.gif" width="20"></a>
+    <a href="about.html" class="w3-right w3-button w3-white">About the Artist</a>
   </header>
 
   <!-- Photo Grid -->
