--- a/work-single.html
+++ b/work-single.html
@@ -31,6 +31,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/img/floresmockupthumb.jpg" style="width:100%">
       <img src="/img/IMG_0972.PNG" style="width:100%">
+         <img src="/img/All%20in%20one_Cap%20Mock-up.png" style="width:100%">
     </div>
   </div>
   
