--- a/work-single.html
+++ b/work-single.html
@@ -16,7 +16,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white"><img src="img/felixloop.gif" width="20%"></a>
+    <a href="#" class="w3-left w3-button w3-white"><<IMG align="left" src="img/felixloop.gif" width="20%"></a>
     <a href="about.html" class="w3-right w3-button w3-white">About the Artist</a>
   </header>
 
