--- a/work-single.html
+++ b/work-single.html
@@ -25,14 +25,13 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%">
       <img src="/img/Mockup.jpg" style="width:100%">
-     
-       <img src="/img/All%20in%20one_Cap%20Mock-up.png" style="width:100%">
+       <img src="/img/Graphic Tee thumb faded.jpg" style="width:100%">
     </div>
 
     <div class="w3-half">
       <img src="/img/floresmockupthumb.jpg" style="width:100%">
       <img src="/img/IMG_0972.PNG" style="width:100%">
-         <img src="/img/mq3.jpg" style="width:100%">
+      <img src="/img/mq3.jpg" style="width:100%">
     </div>
   </div>
   
