--- a/work-single.html
+++ b/work-single.html
@@ -31,7 +31,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/img/floresmockupthumb.jpg" style="width:100%">
       <img src="/img/IMG_0972.PNG" style="width:100%">
-      <img src="/img/mq3.jpg" style="width:100%">
+      <img src="/img/8point turn thumb.jpg" style="width:100%">
     </div>
   </div>
   
