--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <style>
 body {font-family: "Raleway", Arial, sans-serif}
 .w3-row img {margin-bottom: -8px}
+  <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+<!-- Add font awesome icons -->
+
 </style>
 <body>
 
@@ -39,7 +51,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 </div>
 
 <!-- Footer -->
-
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
 </footer>
  
 </body>
