--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@ body {font-family: "Raleway", Arial, sans-serif}
   text-decoration: none;
   border-radius: 50%;
 }
+    .fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+  .fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+  .fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+  .fa-instagram {
+  background: #125688;
+  color: white;
+}
 <!-- Add font awesome icons -->
 
 </style>
