--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@ body {font-family: "Raleway", Arial, sans-serif}
 <!-- End Page Content -->
 </div>
 </body>
-<!-- Footer -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
+<!-- Footer --><center>
+ &nbsp;
+ &nbsp;
+  <a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+
+  <a href="#" class="fa fa-youtube"></a></center>
 </footer>
  
 
