--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@ body {font-family: "Raleway", Arial, sans-serif}
   color: white;
 }
 <!-- Add font awesome icons -->
-
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: gray;
+  color: white;
+  text-align: center;
+}
 </style>
 <body>
 
@@ -70,10 +78,13 @@ body {font-family: "Raleway", Arial, sans-serif}
 <!-- Footer --><center>
  &nbsp;
  &nbsp;
+ <div class="footer">
+  <p>Powered By Coffee</p>
+
   <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-instagram"></a>
 
-  <a href="#" class="fa fa-youtube"></a></center>
+  <a href="#" class="fa fa-youtube"></a></center></div>
 </footer>
  
 
