--- a/about.html
+++ b/about.html
@@ -5,20 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {font-family: "Raleway", Arial, sans-serif}
 .w3-row img {margin-bottom: -8px}
   <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 .fa {
   padding: 20px;
-  font-size: 30px;
+  font-size: 60px;
   width: 30px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
 }
-  .fa-twitter {
+    .fa-twitter {
   background: #55ACEE;
   color: white;
 }
@@ -34,10 +35,16 @@ body {font-family: "Raleway", Arial, sans-serif}
   background: #125688;
   color: white;
 }
-  
-  
 <!-- Add font awesome icons -->
-
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: gray;
+  color: white;
+  text-align: center;
+}
 </style>
 <body>
 
@@ -47,31 +54,31 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
-    <a href="about.html" class="w3-right w3-button w3-white">About the Artist</a>
+    <a href="about.html" class="w3-right w3-button w3-white">H</a>
   </header>
 
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
-      <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%">
-      <img src="/img/Mockup.jpg" style="width:100%">
-      <img src="/img/Graphic Tee thumb faded.jpg" style="width:100%">
+      <img src="/img/map.jpg" style="width:100%">
+     
     </div>
 
-    <div class="w3-half">
-      <img src="/img/floresmockupthumb.jpg" style="width:100%">
-      <img src="/img/IMG_0972.PNG" style="width:100%">
-      <img src="/img/8point turn thumb2.jpg" style="width:100%">
-    </div>
-  </div>
   
 <!-- End Page Content -->
 </div>
+</body>
+<!-- Footer --><center>
+ &nbsp;
+ &nbsp;
+ <div class="footer">
+  <p>Powered By Coffee</p>
 
-<!-- Footer -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+
+  <a href="#" class="fa fa-youtube"></a></center></div>
 </footer>
  
-</body>
+
 </html>
