--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
-    <a href="about.html" class="w3-right w3-button w3-white"></a>
+    <a href="#.html" class="w3-right w3-button w3-white">About</a>
   </header>
 
   <!-- Photo Grid -->
