--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@ body {font-family: "Raleway", Arial, sans-serif}
     <IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
     <a href="index.html" class="w3-right w3-button w3-white">Home</a>
   </header>
-
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
