--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@ body {font-family: "Raleway", Arial, sans-serif}
  &nbsp;
  &nbsp;
  <div class="footer">
+  <center>
   <p>Powered By Coffee</p>
 
-  <a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-instagram"></a>
-
-  <a href="#" class="fa fa-youtube"></a></center></div>
+<a href="#" class="fa fa-youtube"></a></center></div>
 </footer>
  
 
