--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ body {font-family: "Raleway", Arial, sans-serif}
       <img src="/img/8point turn thumb2.jpg" style="width:100%">
     </div>
   </div>
+ </div>
   
 <!-- End Page Content -->
 
