--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
-      <img src="/img/map.JPG" style="width:100%">
+      <img src="/img/dfw map.JPG" style="width:100%">
      
     </div>
 
