--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   
 
   <!-- The Band Section -->
+ <img src="\img\dfw map.JPG">
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">THE BAND</h2>
     <p class="w3-opacity"><i>We love music</i></p>
