--- a/index.html
+++ b/index.html
@@ -9,42 +9,7 @@
 <style>
 body {font-family: "Raleway", Arial, sans-serif}
 .w3-row img {margin-bottom: -8px}
-  <!-- Add icon library -->
 
-.fa {
-  padding: 20px;
-  font-size: 60px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-}
-    .fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-  .fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-  .fa-youtube {
-  background: #bb0000;
-  color: white;
-}
-  .fa-instagram {
-  background: #125688;
-  color: white;
-}
-<!-- Add font awesome icons -->
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: gray;
-  color: white;
-  text-align: center;
-}
 </style>
 <body>
 
@@ -75,18 +40,17 @@ body {font-family: "Raleway", Arial, sans-serif}
   
 <!-- End Page Content -->
 
-</body>
-<!-- Footer --><center>
- &nbsp;
- &nbsp;
- <div class="footer">
-  <center>
-  <p>Powered By Coffee</p>
 
-<a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-youtube"></a></center></div>
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
- 
+ </body>
 
 </html>
