--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 </style>
  <body>
   
+  <!-- !PAGE CONTENT! -->
+<div class="w3-content" style="max-width:1500px">
   
    <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
@@ -21,8 +23,6 @@ body {font-family: "Raleway", Arial, sans-serif}
   </header>
 
 
-<!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   
 
