--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@ body {font-family: "Raleway", Arial, sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">About the Artist</h2>
     <p class="w3-opacity"><i>c</i></p>
-    <p class="w3-justify">Felix is a professional artist based out of the Dallas-Fort Worth Metroplex.
+    <p class="w3-justify">I am a professional graphic designer based out of the Dallas-Fort Worth Metroplex. I have been creating art all of my life but for the past 8 years my primary focus has been on improving my skills as a graphic designer. My geniune love for art is what fuels me to constantly learn new skills and techniques in the visual arts. I am always looking for new opportunities to refine my craft as a artist. 
+     
  </p>
    
 
@@ -41,9 +42,9 @@ body {font-family: "Raleway", Arial, sans-serif}
     <p class="w3-opacity w3-center"><i>Let's work together!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
+        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, US<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
       </div>
       <div class="w3-col m6">
         <form action="/action_page.php" target="_blank">
