--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <p class="w3-opacity w3-center"><i></i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Dallas-Fort Worth, USA<br>
+        <i class="fa fa-map-marker" style="width:30px"></i> Dallas-Fort Worth, Texas, USA<br>
 
         <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
       </div>
@@ -77,7 +77,6 @@ body {font-family: "Raleway", Arial, sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
 
