--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center><img src="\img\dfw map.JPG"></center>
+   <center><img src="\img\OpalandOnyxPhotography-17.jpg"></center>
 
   <!-- The Band Section -->
 
