--- a/about.html
+++ b/about.html
@@ -24,14 +24,14 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center><img src="\img\OpalandOnyxPhotography-17.jpg"></center>
+   <center><img src="\img\aboutpic.png"></center>
 
   <!-- The Band Section -->
 
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">About the Artist</h2>
     <p class="w3-opacity"><i>c</i></p>
-    <p class="w3-justify">I am a professional graphic designer based out of the Dallas-Fort Worth Metroplex. I have been creating art all of my life but for the past 8 years my primary focus has been graphic design. My geniune love for art is what fuels me to constantly learn new skills and techniques in the visual arts. I am always looking for new opportunities to refine my craft as a artist. 
+    <p class="w3-justify">I am a professional graphic designer based out of the Dallas-Fort Worth Metroplex. I have been creating art all of my life but for the past 8 years my primary focus has been on graphic design. My geniune passion for art is what fuels me to constantly refine my craft.
      
  </p>
    
