--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <p class="w3-opacity w3-center"><i></i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Dallas-Fort Worth, Texas, USA<br>
+        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, Texas<br>
 
         <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
       </div>
