--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">About the Artist</h2>
-    <p class="w3-opacity"><i>c</i></p>
+    <p class="w3-opacity"><i></i></p>
     <p class="w3-justify">I am a professional graphic designer based out of the Dallas-Fort Worth Metroplex.  My genuine passion for art in all its forms fuels me to pursue improvement in my craft.
      
  </p>
