--- a/about.html
+++ b/about.html
@@ -31,37 +31,13 @@ body {font-family: "Raleway", Arial, sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">About the Artist</h2>
     <p class="w3-opacity"><i></i></p>
-    <p class="w3-justify">I am a professional graphic designer based out of the Dallas-Fort Worth Metroplex.  My genuine passion for art in all its forms fuels me to pursue improvement in my craft.
+    <p class="w3-justify">I'm a professional graphic designer currently working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train brazilian jiu-jitsu and working on my designs. I am finishing up my degree in Graphic Design and Media Arts with a concentration in 3D Modeling from Southern New Hampshire University and hope to be done by the end of 2022.</p>
+   <br>
+   <p>My genuine passion for art in all its forms fuels me to pursue improvement in my craft. I'm always looking for new opportunities to work on creative projects with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
      
  </p>
    
 
-  <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i></i></p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, Texas<br>
-
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
-      </div>
-    </div>
-  </div>
   
 <!-- End Page Content -->
 </div>
