--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center><img src="\img\aboutpicbw.png"></center>
+   <center><img src="\img\aboutpic3.png"></center>
 
   <!-- The Band Section -->
 
