--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">About the Artist</h2>
     <p class="w3-opacity"><i></i></p>
-    <p class="w3-justify">I'm a graphic designer currently working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train brazilian jiu-jitsu and work on my designs. I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
+    <p class="w3-justify">I'm a graphic designer currently working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train Brazilian jiu-jitsu and work on my designs. I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
    <br>
    <p>My genuine passion for art in all its forms fuels me to pursue improvement in my craft. I'm always looking for new opportunities to work on creative projects with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
      
