--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   
    <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
+   <IMG align="left" src="img/fz-gif-courier.gif" width="25%">
     <a href="index.html" class="w3-right w3-button w3-white">Home</a>
   </header>
 
