--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center><img src="img/aboutpic6.png"></center>
+   <center><img src="img/aboutpic6.png" width="80%"></center>
 
   <!-- The Band Section -->
 
