--- a/beardoil.html
+++ b/beardoil.html
@@ -25,7 +25,9 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center><img src="img/tobaccovanillaoil.jpg" style="width:40%" alt="Beard Oil bottle mockup"></center>
+   <center><img src="img/tobaccovanillaoil.jpg" style="width:40%" alt="Beard Oil bottle mockup">
+   
+  <img src="img/pf-s100-mockup-04111.jpg" style="width:40%" alt="Beard Oil bottle mockup"></center>  
 
   <!-- The Band Section -->
 
