--- a/beardoil.html
+++ b/beardoil.html
@@ -25,8 +25,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center> <img src="img/pf-s100-mockup-04111.jpg" alt="Beard Oil bottle mockup">
-    <img src="img/tobaccovanillaoil.jpg" alt="Beard Oil bottle mockup">
+   <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup">
+    <img src="img/tobaccovanillaoil.jpg" style="width:60%" alt="Beard Oil bottle mockup">
     </center>  
 
   <!-- The Band Section -->
