--- a/beardoil.html
+++ b/beardoil.html
@@ -65,7 +65,7 @@ body {font-family: "Raleway", Arial, sans-serif}
  
  
  
-<img src="img/Beard Oil Box.png" style="width:60%" alt="Beard Oil bottle mockup"></center>
+<img src="img/Beard%20Oil%20Box.png" style="width:60%" alt="Beard Oil box mockup"></center>
   <br>
  <br>
 <!-- End Page Content -->
