--- a/beardoil.html
+++ b/beardoil.html
@@ -48,6 +48,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 </div>
     <!-- Photo Grid -->
 
+     <center><img src="img/beardbalm.jpg" style="width:100%" alt="Beard balm mockup"></center>
    <center><img src="img/Beard%20Oil%20Box.png" style="width:100%" alt="Beard Oil box mockup"></center>
   <br>
  <br>
