--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
     <div class="w3-half">
       <img src="/img/floresmockupthumb.jpg" style="width:100%">
+     <img src="/img/Wedding Invite.jpg" syle="width:100%">
      
       <img src="/img/hhcbrick.jpg" style="width:100%"> 
      <img src="/img/retrobot%20sticker.jpg" style="width:100%">    
