--- a/index.html
+++ b/index.html
@@ -47,14 +47,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   </div>
    <br>
  <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
-  <h2>About</h2>
-  <img src="img/aboutpic6.png" style="width:30%" class="w3-image w3-padding-32" width="300" height="300">
-  <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
-    <p>I'm a graphic designer working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train Brazilian jiu-jitsu and work on my designs. Currently, I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
-      <br>
-   <p>I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
-     
- </p>
+
     
 
   <br>
@@ -62,7 +55,17 @@ body {font-family: "Raleway", Arial, sans-serif}
   <br>
  <br>
 <!-- End Page Content -->
-
+<!-- Place <div> tag where you want the feed to appear -->
+<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+<script type="text/javascript">
+/* curator-feed-default-feed-layout */
+(function(){
+var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+i.src = "https://cdn.curator.io/published/851066e1-93ae-4f0a-9e9f-164c17d6f7c6.js";
+e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+})();
+</script>
 
 <!-- Footer -->
 
