--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>Felix Zavala</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,21 @@ body {font-family: "Raleway", Arial, sans-serif}
 .w3-row img {margin-bottom: -8px}
 
 </style>
+<body>
+
+<!-- !PAGE CONTENT! -->
+<div class="w3-content" style="max-width:1500px">
+
+  <!-- Header -->
+  <header class="w3-container w3-xlarge w3-padding-44">
+   <br>
+    <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" style="width:25%" alt="Felix Zavala Motion graphics logo"></a>
+    <a href="about.html" class="w3-right w3-button w3-white">About</a>
+  </header>
+  &nbsp;
+    &nbsp;
+   <br>
+    <br>
  <body>
   
   <!-- !PAGE CONTENT! -->
