--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   
 <!-- End Page Content -->
 </div>
-
+ </div>
 <!-- Image of location/map -->
 
    </div>
