--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <br>
  <body>
   
-  <center><img src="img/aboutpicbw.png" style="width:75%" alt="Felix Zavala About me pic"></center>
+  <center><img src="img/aboutpic6.png" style="width:75%" alt="Felix Zavala About me pic"></center>
 
   <!-- The Band Section -->
 
