--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <br>
  <body>
   
-  <center><img src="img/aboutpic6.png" style="width:75%" alt="Felix Zavala About me pic"></center>
+  <center><img src="img/aboutpic6.png" style="width:50%" alt="Felix Zavala About me pic"></center>
 
   <!-- The Band Section -->
 
@@ -37,7 +37,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <p class="w3-opacity"><i></i></p>
     <p class="w3-justify">I'm a graphic designer working out of the Dallas-Fort Worth Metroplex. In my spare time, I like to train Brazilian jiu-jitsu and work on my designs. Currently, I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
    <br>
-   <p>My genuine passion for art in all its forms fuels me to pursue the improvement of my craft. I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to jfelixzavala@yahoo.com</a>
+   <p>My genuine passion for art in all its forms fuels me to pursue the improvement of my craft. I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to <a href="mailto:jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
      
  </p>
    
@@ -48,7 +48,7 @@ body {font-family: "Raleway", Arial, sans-serif}
  </div>
 <!-- Image of location/map -->
 
-   </div>
+   
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
