--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
              I'm an experienced graphic designer with years of experience
               creating web and motion graphics.
             Check out some of my work.</p>
-            <a href="#" class="btn">my portfolio</a>
+            <a href="/portfolio.html" class="btn">My portfolio</a>
             
            
          </div>
