--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="content">
           <h1>HTML / CSS / Javascript </h1>
           <p>
-            I am constanly trying to improve my skills by refining the basics.
+            I'm constanly improving my skills by refining the basics.
             This website and the game below are some examples of 
            some fun stuff I've created with HTML, CSS, and Javascript. 
            </p>
