--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/styles1.css"></link>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"></link>
- <link rel="shortcut icon" type="image/jpg" href="img/Felix Favicon.png"/>
+ <link rel="shortcut icon" type="image/jpg" href="img/fboxlogowhite.png"/>
 
 
 </head>
