--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           I'm always looking for opportunities to expand my skillset and work with talented people.
          Please contact me if you're interested in collaborating or learning more about my
           services.</p>
-         <a href="#" class="btn">Contact Me</a>
+         <a href="mailto:jfelixzavala@yahoo.com" class="btn">Contact Me</a>
        
      </div>
    </div>
