--- a/index.html
+++ b/index.html
@@ -126,16 +126,13 @@
 
 
 
-<header>Contact</header>
-
-<hr>
 
 
 <script src="assets/js/script.js"></script>
 
   </body>
 <footer>
-  <p>felixzavala.com 2021</p>
+  <p class="toptxtgame">felixzavala.com 2021</p>
 </footer>
  
  </html>
