--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 .w3-row img {margin-bottom: -8px}
 
 </style>
-<body id="bodybg">
+<body>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
