--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
     </div>
 
   
-<p class="toptxtgame">felixzavala.com 2021</p>
+    <p class="toptxtgame"><a href="https://www.felixzavala.com/>felixzavala.com 2021</a></p>
 
   </footer>
 </html>
