--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <div class="content">
           <h1>HTML / CSS / Javascript </h1>
           <p>
-    HTML, CSS, & JavaScript are an essential part of every web developer’s arsenal. This website and the game at the bottom of the page
-            were both created using these 3 web languages. I'm consistently pursuing ways to refine these core skills. I just 
-            succesfully completed freeCodeCamps Responsive Web Design course.
+    HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website and the landing page located in the link below are some examples of 
+            what I'm capable of creating with these 3 technologies. I'm consistently pursuing ways to refine these core skills. I just 
+            succesfully completed the <a href="https://www.freecodecamp.org">freeCodeCamp.com</a> Responsive Web Design course.
             That represents approximately 300 hours of coursework in HTML, CSS, and Javascript. They are an amazing free resource for developers of all levels.
             
 
            </p>
-          <p><a href="https://www.freecodecamp.org/">freeCodeCamp.com</a> <a href="/img/fzwebcert.jpg" target="blank">My freeCodeCamp Certificate</a></p>
+          <p><a href="https://mailchi.mp/ab087871e41a/mars/">Landing Page</a> <a href="/img/fzwebcert.jpg" target="blank">My freeCodeCamp Certificate</a></p>
          
        </div>
      </div>
