--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <p>
     HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website and the landing page located in the link below are some examples of 
             what I'm capable of creating with these 3 technologies. I'm consistently pursuing ways to refine these core skills. I just 
-            succesfully completed the <a id="fcc" href="https://www.freecodecamp.org">freeCodeCamp.com</a> Responsive Web Design course.
+            succesfully completed the freeCodeCamp.com Responsive Web Design course.
             That represents approximately 300 hours of coursework in HTML, CSS, and Javascript. They are an amazing free resource for developers of all levels.
             
 
