--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
 
            </p>
-          <p><a href="/mars.html">Landing Page</a> <a href="/img/fzwebcert.jpg" target="blank">My freeCodeCamp Certificate</a></p>
+          <p><a href="/mars.html">Landing Page</a> <a href="/img/fzwebcert.JPG" target="blank">My freeCodeCamp Certificate</a></p>
          
        </div>
      </div>
