--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <div class="left2"></div>
       <div class="right2">
         <div class="content">
-          <h1>HTML / CSS / Javascript </h1>
+          <h1>Front End </h1>
           <p>
-    HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website and the landing page located in the link below are some examples of 
-            what I'm capable of creating with these 3 technologies.
+    HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website was created with those 3 core technologies.
+            The landing page in the link below was created using HTML, CSS, and Bootstrap technologies.
             
 
            </p>
