--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     
     </div>
   
-  <p class="toptxtgame"><a href="https://www.felixzavala.com/">felixzavala.com 2021</p>
+  <p class="toptxtgame"><a href="www.felixzavala.com/">felixzavala.com 2021</p>
 </footer>
  
  </html>
